temple page update

--- a/final-project/temple.html
+++ b/final-project/temple.html
@@ -57,12 +57,9 @@
                 <p>Wind speed: <span id="speed"></span> km/h</p>
         </header>
         <main>
-            <div class="direct">
-                <h1>Business Directory</h1>
-                <div class="menu">
-                    <button id="grid">Grid</button>
-                    <button id="list">List</button>
-                </div>
+            <div class="temple-grid">
+                <h1>Temple List</h1>
+
                 <article class="grid">
                     <div class="cards"></div>
                 </article>
