--- a/final-project/services.html
+++ b/final-project/services.html
@@ -1,54 +1,171 @@
 <!DOCTYPE html>
 <html lang="en-Us">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>The Temple Inn & Suites</title>
-        <meta name="description" content="Final Project: The Temple Inn & Suites"/>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/base.css">
-    </head>
-    <body>
-        <div id="content">
-            <header>
-                <img src="images/Temple Inn logo.png" alt="logo of ">
-                <h1>The Temple Inn & Suites, Bethesda</h1>
 
-                <div class="date-now">
-                    <nav>
-                        <ul class="navigation" id="navbar">
-                            <li><a class="ham" href="#">Manu</a></li>
-                            <li><a href="index.html" class="nav-link">Home</a></li>
-                            <li><a href="temples.html" class="nav-link">Temples</a></li>
-                            <li><a href="reservation.html" class="nav-link">Reservation</a></li>
-                            <li><a href="services.html" class="nav-link">Our Services</a></li>
-                            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
-                        </ul>
-                    </nav>
-                    <p><span class="date"></span></p>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>The Temple Inn & Suites</title>
+    <meta name="description" content="Final Project: The Temple Inn & Suites" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/base.css">
+</head>
+
+<body>
+    <div id="content">
+        <header>
+            <div class="header1">
+                <div class="logo-box">
+                    <a href="index.html">
+                        <img src="images/Temple Inn logo.png" alt="site logo">
+                    </a>
                 </div>
-                
-            </header>
-            <main>
+                <div class="header-text">
+                    <h1>The Temple Inn & Suites,</h1>
+                    <p>Bethesda</p>
+                </div>
 
-                <section class="dropdown">
-                    <h2>Free Amenities</h2>
-                    <div class="dropdown-content">
-                        <a href="#" id="wifi"><img src="images/amenities/wifi.jpg" alt=""></a>
-                        <a href="#" id="pool"><img src="images/amenities/pool.jpg" alt=""></a>
-                        <a href="#" id="parking"><img src="images/amenities/parking.jpg" alt=""></a>
-                        <a href="#" id="smoking"><img src="images/amenities/no-smoking.jpg" alt=""></a>
-                        <a href="#" id="workout"><img src="images/amenities/fitness-center.jpg" alt=""></a>
-                        <a href="#" id="breakfast"><img src="images/amenities/free-breakfast-c.jpg" alt=""></a>
+                <div class="social">
+                    <a href="https://web.facebook.com/hazike.amy/" target="_blank">
+                        <img src="images/icons/facebook_108044.ico" alt="Facebook icon">
+                    </a>
+                    <a href="https://www.instagram.com/quamiasiedu/" target="_blank">
+                        <img src="images/icons/instagram_108043.ico" alt="Instagram icon">
+                    </a>
+                    <a href="https://youtube.com" target="_blank">
+                        <img src="images/icons/youtube_108041.ico" alt="Twitter icon">
+                    </a>
+                </div>
+            </div>
+
+            <nav>
+                <ul class="navigation" id="navbar">
+                    <li><a class="ham" href="#">Manu</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="temples.html" class="nav-link">Temples</a></li>
+                    <li><a href="reservation.html" class="nav-link">Reservation</a></li>
+                    <li><a href="services.html" class="nav-link">Our Services</a></li>
+                </ul>
+            </nav>
+
+            <div class="date-now">
+                <p>Time: <span class="date"></span></p>
+                <div id="weather"><img src="" alt="" id="weather-icon" />
+                    <p>Temperature: <span id="current-temp"></span> &deg;F</p>
+                </div>
+                <p>Humidity: <span id="humidity"></span>%</p>
+                <p>Wind speed: <span id="speed"></span> km/h</p>
+        </header>
+        <main>
+            <div class="service-div">
+                <div class="special-services">
+                    <h1>Our Specialized Services</h1>
+                    <ul>
+                        <li>
+                            <p>Free access to changing rooms and bathroom facilities for temple patrons who have
+                                traveled
+                                far and need to change to and
+                                from church clothes.</p>
+                        </li>
+                        <li>
+                            <p>A playroom and low-cost, short-term babysitting services for the children of patrons</p>
+                        </li>
+                        <li>
+                            <p>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</p>
+                        </li>
+                        <li>
+                            <p>Temple history themed reception and sitting area</p>
+                        </li>
+                        <li>
+                            <p>A wedding reception hall that can be easily customized with a simple catering menu and
+                                kitchen access for food
+                                preparation and serving</p>
+                        </li>
+                        <li>
+                            <p>A family search center that supports family search and ordinance work</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="services-ameni">
+                    <h1>Free Amenities</h1>
+                    <ul>
+                        <li>
+                            <p>Breakfast</p>
+                        </li>
+                        <li>
+                            <p>Exercise/workout room</p>
+                        </li>
+                        <li>
+                            <p>Indoor pool</p>
+                        </li>
+                        <li>
+                            <p>WiFi high-speed internet access and smart TVs</p>
+                        </li>
+                        <li>
+                            <p>Parking</p>
+                        </li>
+                        <li>
+                            <p>Temple shuttle</p>
+                        </li>
+                        <li>
+                            <p>Family history consultation and family ordinance card service</p>
+                        </li>
+                    </ul>
+                </div>
+                <section class="sub-pages">
+                    <div>
+                        <h3>To reserve all of your wedding reception accommodations, including choices for food service
+                            and
+                            setup, go to our
+                            <a href="reception page.html" class="nav-link">reception section</a>.
+                        </h3>
+                    </div>
+                    <div>
+                        <h3>For more information about the suites provided by this hotel, please visit Our <a
+                                href="missionary.html" class="nav-link">full-time temple
+                                missionary</a> section.</h3>
                     </div>
                 </section>
-                 
-            </main>
-            <footer>
-                <p> &copy;2022 &nbsp;.:|:.&nbsp;<strong>Isaac Asiedu</strong> &nbsp;.:|:.&nbsp;WDD 230 Project &nbsp;.:|:. &nbsp; Last Updated: <span id="lastModified"></span></p>
-            </footer>
-        </div>
-        <script src="js/currentdate.js"></script>
-        <script src="js/basicScripts.js"></script>
-    </body>
+            </div>
+
+        </main>
+        <footer>
+            <div class="footer1">
+
+                <section class="headings2">
+                    <h2>The Temple Inn & Suites,
+                        Bethesda</h2>
+                    <q>Montgomery Ln #300</q>
+                    <p>🌍Bethesda, U.S.A</p>
+                    <p></p>
+                </section>
+                <div>
+                    <p><strong>Contact us!</strong></p>
+                    <p>info@TempleInn&Suites.com</p>
+                    <p>📞 +(233) 5503-35577</p>
+                    <p><a href="https://www.google.com/maps/@5.619712,-0.1998848,13z" target="_blank"
+                            class="location-link">🚩 Location Map</a></p>
+                </div>
+                <div class="social">
+                    <a href="https://web.facebook.com/hazike.amy/" target="_blank">
+                        <img src="images/icons/facebook_108044.ico" alt="Facebook icon">
+                    </a>
+                    <a href="https://www.instagram.com/quamiasiedu/" target="_blank">
+                        <img src="images/icons/instagram_108043.ico" alt="Instagram icon">
+                    </a>
+                    <a href="https://youtube.com" target="_blank">
+                        <img src="images/icons/youtube_108041.ico" alt="Twitter icon">
+                    </a>
+                </div>
+            </div>
+            <div class="footer2">
+                <p> &copy;2022 &nbsp;.:|:.&nbsp;<strong>Isaac Asiedu</strong> &nbsp;.:|:.&nbsp;WDD 230 Final Project
+                    &nbsp;.:|:. &nbsp; Last Updated: <span id="lastModified"></span></p>
+            </div>
+        </footer>
+    </div>
+    <script src="js/apiFetchs.js"></script>
+    <script src="js/basicScripts.js"></script>
+
+</body>
+
 </html>
