--- a/final-project/temples.html
+++ b/final-project/temples.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Final Project: The Temple Inn & Suites" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 
 <body>
