--- a/final-project/index.html
+++ b/final-project/index.html
@@ -66,19 +66,19 @@
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                    <img src="images/home/dylan-bed-1.jpg" style="width:100%">
+                    <img src="images/home/dylan-bed-1.jpg" alt="" style="width:100%">
                     <div class="text">1 Queen Bedst</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img src="images/home/pexels-bed-2.jpg" style="width:100%">
+                    <img src="images/home/pexels-bed-2.jpg" alt="" style="width:100%">
                     <div class="text">Suite-1 King Bed</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img src="images/home/pexels-terry-bed-3.jpg" style="width:100%">
+                    <img src="images/home/pexels-terry-bed-3.jpg" alt="" style="width:100%">
                     <div class="text">1 King Bed</div>
                 </div>
 
