--- a/final-project/temples.html
+++ b/final-project/temples.html
@@ -17,7 +17,7 @@
             <div class="header1">
                 <div class="logo-box">
                     <a href="index.html">
-                        <img src="images/Temple Inn logo.png" alt="site logo">
+                        <img src="images/Temple-Inn-logo.png" alt="site logo">
                     </a>
                 </div>
                 <div class="header-text">
@@ -55,6 +55,7 @@
                 </div>
                 <p>Humidity: <span id="humidity"></span>%</p>
                 <p>Wind speed: <span id="speed"></span> km/h</p>
+            </div>
         </header>
         <main>
             <div class="temple-grid">
